# HomeSensorHub

./: .gitignore  DataSender.py  EnvironmentalSensor.py  Jenkinsfile  LightSensor.py  Makefile  README.md  TSL258x.py  __init__.py  data_sender.py  kubepods.yaml  main.py  pyproject.toml  requirements.txt  run.sh  setup.cfg
communication/: data_sender.py  sensor_hub.py
docs/: top_level_architecture.dia
homesensorhub/: __init__.py  __main__.py  homesensorhub.py
homesensorhub/TSL258x_something/: TSL258x.py
homesensorhub/app/: __init__.py  __main__.py  flask_config.py  forms.py  routes.py
homesensorhub/app/templates/: base.html  home.html  index.html  login.html  macros.html  mqtt.html
homesensorhub/communication/: data_sender.py  payload.py  sensor_hub.py  sensor_sink.py
homesensorhub/flask_data/: __main__.py  flask_application.py  forms.py
homesensorhub/flask_data/templates/: home.html  mqtt.html
homesensorhub/routing/: data_sender.py  mqtt.py  mqtt_sender.py  mqtt_subscriber.py  payload.py  sensor_sink.py
homesensorhub/sensors/: environmental_sensor.py  light_sensor.py  motion_sensor.py  probe.py  sensor.py  sensor_types.py
homesensorhub/sensors/BoschBME/: probe.py
homesensorhub/utils/: configuration.py  logging.py
sensors/: environmental_sensor.py  motion_sensor.py  sensor.py  sensor_hub.py
test/test_cases/: test_it_all.py  test_light_sensors.py
tests/: requirements.txt  test_it_all.py
tests/drivers/: TSL258x.py  adafruit_bme680.py
tests/sensors/: test_light_sensors.py  test_motion_sensor.py
tests/test_integration/: test_main.py
(+47 files in other folders)
